--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@
 version: 2.1
 # Use a package of configuration called an orb.
 orbs:
+  # slack 通知
+  slack: circleci/slack@3.3.0
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
@@ -10,4 +12,12 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      deploy-and-notify:
+        executor: container
+        steps:
+          - checkout
+          - run: ./deploy.sh
+          - slack/status:
+              success_message: ':circleci-pass: $CIRCLE_BRANCH のデプロイが完了しました\n:github_octocat: User：$CIRCLE_USERNAME'
+              failure_message: ':circleci-fail: $CIRCLE_BRANCH のデプロイが失敗しました\n:github_octocat: User：$CIRCLE_USERNAME'
+              webhook: '${SLACK_WEBHOOK}'
