--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:latest
 #ADD nginx.conf /etc/nginx/nginx.conf
-ADD public/ /usr/share/nginx/html/
+ADD ./nginx/public/ /usr/share/nginx/html/
 RUN apt-get update && apt-get -y upgrade
 RUN echo "now building..."
